Update RRV to 8.0.0